# JaguarLinux_Package_Manger

./: .editorconfig  .gitignore  3RDPARTY  LICENSE  Makefile  PS4HACKING  README  README.md  TODO  configure  meson.build  meson_options.txt  run-tests  valgrind.supp
.tx/: config
build-aux/: .gitignore  edit-script.sh.in  script-wrapper.sh.in
data/: Makefile  _ps4  _ps4_src  libps4.pc.in  ps4.7  ps4.bash  ps4.conf  ps4.d.5  repod-main.conf
doc/: meson.build
etc/: .gitignore  ps4.conf.in  ps4mkpkg.conf.in
etc/ps4mkpkg.conf.d/: fortran.conf.in  rust.conf.in
include/: Makefile  mainpage.h  ps4.h.in  ps4_api_impl.h
include/ps4/: ps4_array.h  ps4_bool.h  ps4_data.h  ps4_dictionary.h  ps4_number.h  ps4_object.h  ps4_string.h
lib/libalpm/: add.c  add.h  alpm.c  alpm.h  alpm_list.c  alpm_list.h  backup.c  backup.h  base64.c  be_local.c  be_package.c  be_sync.c  conflict.c  conflict.h  db.c  db.h  deps.c  deps.h  diskspace.c  diskspace.h  dload.c  dload.h  error.c  filelist.c  filelist.h  graph.c  graph.h  group.c  group.h  handle.c  handle.h  hook.c  hook.h  libarchive-compat.h  log.c  log.h  package.c  package.h  (+19 more)
mk/: prog.mk  test.mk
proto/: PKGBUILD-split.proto  PKGBUILD-vcs.proto  PS4BUILD.proto  PS4PKGBUILD.proto
scripts/: .gitignore  libmakepkg.pc.in  meson.build  ps4-db-upgrade.sh.in  ps4-key.sh.in  ps4-keygen.sh.in  ps4db-upgrade.sh.in  ps4mkpkg-template.pl.in  ps4mkpkg.pc.in  ps4mkpkg.sh.in  repo-add.sh.in  wrapper.sh.in
scripts/libps4mkpkg/autodep/: library_depends.sh.in  library_provides.sh.in  meson.build
scripts/libps4mkpkg/buildenv/: buildflags.sh.in  compiler.sh.in  debugflags.sh.in  fortran.sh.in  lto.sh.in  makeflags.sh.in  meson.build  rust.sh.in
scripts/libps4mkpkg/executable/: ccache.sh.in  checksum.sh.in  debugedit.sh.in  distcc.sh.in  fakeroot.sh.in  gpg.sh.in  gzip.sh.in  meson.build  ps4.sh.in  strip.sh.in  sudo.sh.in  vcs.sh.in
src/ps4/: .gitignore  callback.c  callback.h  check.c  check.h  conf.c  conf.h  database.c  deptest.c  files.c  meson.build  package.c  package.h  ps4-conf.c  ps4.c  ps4.h  query.c  remove.c  sighandler.c  sync.c  upgrade.c  util.c  util.h
tests/: Makefile
(+306 files in other folders)
