ps4_sources = files('''
  check.h check.c
  conf.h conf.c
  database.c
  deptest.c
  files.c
  package.h package.c
  ps4.h ps4.c
  query.c
  remove.c
  sighandler.h sighandler.c
  sync.c
  callback.h callback.c
  upgrade.c
  util.h util.c
'''.split())

ps4_conf_sources = files('''
  ps4-conf.c
  util.h util.c
  callback.h callback.c
  conf.h conf.c
'''.split())
